force-app/main/default/objects/CostCenter__c/fields/BA__c.field-meta.xml
<CustomField>
    <fullName>BA__c</fullName>
    <description>Its gets the value from IF-124</description>
    <label>BA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>