force-app/main/default/objects/CostCenter__c/fields/Bkzer__c.field-meta.xml
<CustomField>
    <fullName>Bkzer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>실제수익 전기에 대한 잠금지시자</description>
    <label>BKZER</label>
    <type>Checkbox</type>
</CustomField>