force-app/main/default/objects/CostCenter__c/fields/Bkzkp__c.field-meta.xml
<CustomField>
    <fullName>Bkzkp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>실제 1차 전기에 대한 잠금지시자</description>
    <label>BKZKP</label>
    <type>Checkbox</type>
</CustomField>