force-app/main/default/objects/CostCenter__c/fields/Bkzks__c.field-meta.xml
<CustomField>
    <fullName>Bkzks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>실제 2차원가요소에 대한 잠금지시자</description>
    <label>BKZKS</label>
    <type>Checkbox</type>
</CustomField>