force-app/main/default/objects/CostCenter__c/fields/Bkzob__c.field-meta.xml
<CustomField>
    <fullName>Bkzob__c</fullName>
    <defaultValue>false</defaultValue>
    <description>약정사항 갱신에 대한 잠금지시자</description>
    <label>BKZOB</label>
    <type>Checkbox</type>
</CustomField>