force-app/main/default/objects/CostCenter__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <formula>OR(CONTAINS(Node2__c,&apos;ZDMY&apos;), CONTAINS(CostCenterName__c,&apos;폐쇄&apos;) ,CONTAINS(CostCenterName__c,&apos;페쇄&apos;) ,CONTAINS(CostCenterName__c,&apos;CLSD&apos;), ClosingDate__c &lt; TODAY())</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>