force-app/main/default/objects/CostCenter__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Cost Center</relationshipLabel>
    <relationshipName>Cost_Center</relationshipName>
    <type>Lookup</type>
</CustomField>