force-app/main/default/objects/CostCenter__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <externalId>true</externalId>
    <label>Cost Center</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>