force-app/main/default/objects/CostCenter__c/fields/CostCenterName__c.field-meta.xml
<CustomField>
    <fullName>CostCenterName__c</fullName>
    <label>Cost Center Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>