force-app/main/default/objects/CostCenter__c/fields/DeptManager__c.field-meta.xml
<CustomField>
    <fullName>DeptManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dept Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Cost Center</relationshipLabel>
    <relationshipName>Cost_Center</relationshipName>
    <type>Lookup</type>
</CustomField>