force-app/main/default/objects/CostCenter__c/fields/DeptManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>DeptManagerEmail__c</fullName>
    <formula>DeptManager__r.EvMailAddr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dept Manager Email</label>
    <type>Text</type>
</CustomField>