force-app/main/default/objects/CostCenter__c/fields/L_ORGEH__c.field-meta.xml
<CustomField>
    <fullName>L_ORGEH__c</fullName>
    <description>인사부서코드</description>
    <label>L_ORGEH</label>
    <length>10</length>
    <type>Text</type>
</CustomField>