force-app/main/default/objects/CostCenter__c/fields/Node1__c.field-meta.xml
<CustomField>
    <fullName>Node1__c</fullName>
    <label>NODE1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>