force-app/main/default/objects/CostCenter__c/fields/Node2__c.field-meta.xml
<CustomField>
    <fullName>Node2__c</fullName>
    <label>NODE2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>