force-app/main/default/objects/CostCenter__c/fields/Node3__c.field-meta.xml
<CustomField>
    <fullName>Node3__c</fullName>
    <label>NODE3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>