force-app/main/default/objects/CostCenter__c/fields/Pkzer__c.field-meta.xml
<CustomField>
    <fullName>Pkzer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>수익계획에 대한 잠금지시자</description>
    <label>PKZER</label>
    <type>Checkbox</type>
</CustomField>