force-app/main/default/objects/CostCenter__c/fields/Pkzkp__c.field-meta.xml
<CustomField>
    <fullName>Pkzkp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>계획 1차원가요소에 대한 잠금지시자</description>
    <label>PKZKP</label>
    <type>Checkbox</type>
</CustomField>