force-app/main/default/objects/CostCenter__c/fields/Pkzks__c.field-meta.xml
<CustomField>
    <fullName>Pkzks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>계획 2차원가요소에 대한 잠금지시자</description>
    <label>PKZKS</label>
    <type>Checkbox</type>
</CustomField>