force-app/main/default/objects/CostCenter__c/fields/Text1__c.field-meta.xml
<CustomField>
    <fullName>Text1__c</fullName>
    <label>TEXT1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>