force-app/main/default/objects/CostCenter__c/fields/Text2__c.field-meta.xml
<CustomField>
    <fullName>Text2__c</fullName>
    <label>TEXT2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>