force-app/main/default/objects/CostCenter__c/fields/ZZCheck__c.field-meta.xml
<CustomField>
    <fullName>ZZCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZZCheck</label>
    <type>Checkbox</type>
</CustomField>