force-app/main/default/objects/CostCenter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CostCenter__c</columns>
    <columns>NAME</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <columns>Text4__c</columns>
    <columns>Text5__c</columns>
    <columns>CostCenterName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>